add_subdirectory(hl)

add_sources(
	ammo.cpp
	ammo.h
	ammo_secondary.cpp
	ammohistory.cpp
	ammohistory.h
	battery.cpp
	camera.h
	cdll_int.cpp
	cl_dll.h
	cl_util.h
	color_tags.cpp
	color_tags.h
	com_weapons.cpp
	com_weapons.h
	death.cpp
	demo.cpp
	demo.h
	discord_integration.cpp
	discord_integration.h
	entity.cpp
	ev_common.cpp
	ev_hldm.cpp
	ev_hldm.h
	events.cpp
	eventscripts.h
	flashlight.cpp
	forcemodel.cpp
	forcemodel.h
	GameStudioModelRenderer.cpp
	GameStudioModelRenderer.h
	geiger.cpp
	health.cpp
	health.h
	hud.cpp
	hud.h
	hud_bench.cpp
	hud_benchtrace.cpp
	hud_countdown.cpp
	hud_countdown.h
	hud_crosshairs.cpp
	hud_crosshairs.h
	hud_ctf.cpp
	hud_ctf.h
	hud_customtimer.cpp
	hud_customtimer.h
	hud_debug.cpp
	hud_debug.h
	hud_jumpspeed.cpp
	hud_jumpspeed.h
	hud_location.cpp
	hud_location.h
	hud_msg.cpp
	hud_nextmap.cpp
	hud_nextmap.h
	hud_playerid.cpp
	hud_playerid.h
	hud_redraw.cpp
	hud_scores.cpp
	hud_scores.h
	hud_servers.cpp
	hud_servers.h
	hud_servers_priv.h
	hud_settings.cpp
	hud_settings.h
	hud_spectator.cpp
	hud_spectator.h
	hud_speedometer.cpp
	hud_speedometer.h
	hud_strafeguide.cpp
	hud_strafeguide.h
	hud_suddendeath.cpp
	hud_suddendeath.h
	hud_timeout.cpp
	hud_timeout.h
	hud_timer.cpp
	hud_timer.h
	hud_update.cpp
	hud_vote.cpp
	hud_vote.h
	hud_watermark.cpp
	hud_watermark.h
	hud_oldscoreboard.cpp
	hud_oldscoreboard.h
	hudgl.cpp
	hudgl.h
	in_camera.cpp
	in_defs.h
	input.cpp
	inputw32.cpp
	interpolation.cpp
	interpolation.h
	kbutton.h
	menu.cpp
	message.cpp
	rainbow.cpp
	rainbow.h
	saytext.cpp
	status_icons.cpp
	statusbar.cpp
	steam_id.cpp
	steam_id.h
	studio_util.cpp
	StudioModelRenderer.cpp
	StudioModelRenderer.h
	text_message.cpp
	train.cpp
	tri.cpp
	tri.h
	update_checker.cpp
	update_checker.h
	util.cpp
	util_vector.h
	vgui_ClassMenu.cpp
	vgui_ControlConfigPanel.cpp
	vgui_ControlConfigPanel.h
	vgui_CustomObjects.cpp
	vgui_int.cpp
	vgui_int.h
	vgui_MOTDWindow.cpp
	vgui_SchemeManager.cpp
	vgui_SchemeManager.h
	vgui_ScorePanel.cpp
	vgui_ScorePanel.h
	vgui_ServerBrowser.cpp
	vgui_ServerBrowser.h
	vgui_SpectatorPanel.cpp
	vgui_SpectatorPanel.h
	vgui_TeamFortressViewport.cpp
	vgui_teammenu.cpp
	vgui_UnicodeTextImage.cpp
	vgui_UnicodeTextImage.h
	view.cpp
	view.h
	voice_status.cpp
	wrect.h)
